tests/baselines/reference/UnaryOperators1.errors.txt
==== tests/cases/compiler/unaryOperators1.ts (3 errors) ====
    +foo;
     ~~~
!!! error TS2095: Could not find symbol 'foo'.
    -bar;
     ~~~
!!! error TS2095: Could not find symbol 'bar'.
    ~quux;
     ~~~~
!!! error TS2095: Could not find symbol 'quux'.